syntax = "proto3";

package types;

option java_multiple_files = true;
option java_outer_classname = "Types";
option java_package = "com.k8s.types";
option go_package = "./types";

message K8sReadyState {
  int32 count = 1;
  int32 outof = 2;
}

message K8sRestartsState {
  int32 count = 1;
  string ago = 2;
}

enum K8sPodStatus {
  Invalid_Pod_Status = 0;
  Running = 1;

}

enum K8sNodeStatus {
  Invalid_Node_Status = 0;
  Ready = 1;
}

message K8sClusterList {
  repeated K8sCluster list = 1;
}

message K8sCluster {
  string name = 1;
  map<string, K8sNode> nodes = 2;
  map<string, K8sPod> pods = 3;
}

message K8sPod {
  string namespace = 1;
  string name = 2;
  K8sReadyState ready = 3;
  K8sPodStatus status = 4;
  K8sRestartsState restarts = 5;
  string age = 6;
  string ip = 7;
  string node = 8;
  string nominated_node = 9;
  string readiness_gates = 10;
}

message K8sNode {
  string name = 1;
  K8sNodeStatus status = 2;
  string roles = 3;
  string age = 4;
  string version = 5;
  string internal_ip = 6;
  string external_ip = 7;
  string os_image = 8;
  string kernel_version = 9;
  string container_runtime = 10;
}